--- a/student-API/src/main/resources/application.properties
+++ b/student-API/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.data.rest.base-path=/api
 # Datasource credentials
 ##############################################################
 spring.datasource.url=jdbc:mysql://localhost:3306/neo_student
-spring.datasource.username=practice
+spring.datasource.username=demo
 spring.datasource.password=root
 #Disable hibernate sequence
 spring.jpa.hibernate.use-new-id-generator-mappings=false
