Feature:- 	- Included MVC UI

--- a/student-API/src/main/resources/application.properties
+++ b/student-API/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 #base api path
 spring.data.rest.base-path=/api
 
@@ -23,3 +25,4 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:sss
 com.student.jwtSecret=JWTSuperSecretKeyMyConM112389
 con.student.jwtExpirationInMs=604800000
 
+spring.thymeleaf.cache=false
