--- a/student-API/pom.xml
+++ b/student-API/pom.xml
@@ -92,8 +92,15 @@
 		<dependency>
 		    <groupId>org.hibernate.validator</groupId>
 		    <artifactId>hibernate-validator</artifactId>
-		    <version>6.0.9.Final</version>
+		    <version>6.0.9.Final</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		
+		<!-- Thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
